--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Opdracht 6 - Kleurentabel</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <table>
+    <tr>
+        <td class='rood'>rood</td>
+        <td class='groen'>groen</td>
+        <td class='blauw'>blauw</td>
+        <td class='rood'>rood</td>
+    </tr>
+    <tr>
+        <td class='groen'>groen</td>
+        <td class='blauw'>blauw</td>
+        <td class='rood'>rood</td>
+        <td class='groen'>groen</td>
+    </tr>
+    <tr>
+        <td class='blauw'>blauw</td>
+        <td class='rood'>rood</td>
+        <td class='groen'>groen</td>
+        <td class='blauw'>blauw</td>
+    </tr>
+    <tr>
+        <td class='rood'>rood</td>
+        <td class='groen'>groen</td>
+        <td class='blauw'>blauw</td>
+        <td class='rood'>rood</td>
+    </tr>
+  </table> 
+  
 </body>
 </html>
