--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <tr>
         <td class='rood'>rood</td>
         <td class='groen'>groen</td>
-        <td class='blauw'>paars</td>
+        <td class='blauw'>blauw</td>
         <td class='rood'>rood</td>
     </tr>
   </table> 
